--- a/src/components/SidebarLeft/styles.scss
+++ b/src/components/SidebarLeft/styles.scss
@@ -4,7 +4,7 @@
   min-height: 1100px;
   width: 14%;
   box-shadow: 0px 2px 2px #bfbfbf;
-  height: 100%;
+  height: auto;
   background: #fff;
 }
 .sidebar-profile-img {
